@@ -6,6 +6,9 @@ darshan-2.3.1-pre1
 =============
 * Change OPEN_TIMESTAMP field to report timestamp right before open() is
   invoked rather than after timestamp after open is completed
+* Change start_time and end_time fields in job record to use min and max
+  (respectively) across all ranks
+TODO: bump log version number and add warnings about semantic changes  
 
 darshan-2.3.0
 =============
